# rust-playground

./: Cargo.toml
actix-web_test/: Cargo.toml
actix-web_test/src/: main.rs
error_handling/examples/: option.rs  option_unwrap.rs  other.rs  question_mark_operator.rs  result.rs  result_unwrap.rs  unwrap.rs
graphql-monolith-api/: Cargo.toml  README.md
graphql-monolith-api/src/: main.rs
graphql-sample/: .env  Cargo.toml
graphql-sample/migrations/2021-07-27-121645_create_photos/: down.sql
graphql-sample/src/: main.rs
graphql_sample/: Cargo.toml  docker-compose.yml
graphql_sample/migrations/2021-07-27-121645_create_photos/: up.sql
graphql_sample/src/: main.rs  schema.rs
graphql_sample/src/graphql/: schema.rs
grpc-sample/: Cargo.toml  Makefile  build.rs
grpc-sample/proto/: hello_server.proto
grpc-sample/src/: client.rs  server.rs
hello_rust/: Cargo.toml
hello_rust/infra/: Cargo.toml
hello_rust/infra/src/: lib.rs
hello_rust/src/: main1.rs  main2.rs  main3.rs  main4.rs  main5.rs  main6.rs
json-parser/: Cargo.toml
json-parser/src/: lexer.rs  lib.rs  main.rs  parser.rs
layered-arch-sample/: .env  Cargo.toml  README.md  docker-compose.yml
layered-arch-sample/migrations/2021-09-11-124330_create_documents/: up.sql
layered-arch-sample/src/: domains.rs  lib.rs  main.rs  presentations.rs
layered-arch-sample/src/applications/usecase/: documents.rs
layered-arch-sample/src/domains/model/: documents.rs
layered-arch-sample/src/domains/repository/: documents.rs
layered-arch-sample/src/domains/value/: id.rs
layered-arch-sample/src/infrastructures/database/: schema.rs
layered-arch-sample/src/infrastructures/repository/: documents.rs
layered-arch-sample/src/presentations/: request_context.rs
layered-arch-sample/src/presentations/controller/: documents.rs
layered-arch-sample/src/presentations/controller/documents/: documents_controller.rs  request.rs  response.rs
mini-rdbms/: Cargo.toml
mini-rdbms/src/: buffer.rs  disk.rs  slotted.rs
mini-rdbms/src/btree/: branch.rs  leaf.rs  node.rs
my-redis/: README.md
my-redis/examples/: hello_redis.rs
my-redis/src/: main.rs
owernership_sample/samples/: Cargo.toml
parser/: README.md
parser/src/: main.rs
prost-sample/: Cargo.toml  build.rs  envrc.template
prost-sample/src/: items.proto  lib.rs  main.rs
pwhash-sample/: Cargo.toml
pwhash-sample/src/: main.rs
rand-chacha-sample/: Cargo.toml
rand-chacha-sample/src/: main.rs
redis-rs-sample/: Cargo.toml  Makefile
redis-rs-sample/src/: main.rs
regex-sample/: Cargo.toml
regex-sample/src/: main.rs
rstest-sample/: Cargo.toml
rstest-sample/src/: endpoints.rs  main.rs
rusoto-sample/: Cargo.toml  docker-compose.yml
rust-argon2-sample/: Cargo.toml
rust-argon2-sample/src/: main.rs
rust-aws-sdk-sample/: Cargo.toml
rust-by-example/testing/: Cargo.toml
rust-by-example/testing/src/: lib.rs  ut.rs
rust_book/: Cargo.toml
rust_book/ch03/: Cargo.toml
rust_book/ch03/src/: main.rs
rust_book/ch04/: Cargo.toml
rust_book/ch04/src/: main2.rs  main3.rs
rust_book/ch05/: Cargo.toml
rust_book/ch05/src/: main1.rs  main2.rs  main3.rs
rust_book/ch06/: Cargo.toml
rust_book/ch06/src/: main2.rs
rust_book/ch07/restaurant/src/: lib.rs
rust_book/ch08/: Cargo.toml
rust_book/ch08/src/: main.rs
rust_book/ch09/: Cargo.toml
rust_book/ch09/src/: main.rs
rust_book/ch10/: Cargo.toml
rust_book/ch10/src/: lib.rs  main.rs  main1.rs  main3.rs
rust_book/ch11/adder/src/: lib.rs
rust_book/ch12/minigrep/src/: lib.rs  main.rs
rust_book/ch13/: Cargo.toml
rust_book/ch13/src/: main1.rs  main2.rs
rust_book/ch14/: Cargo.toml
rust_book/ch14/add-one/: Cargo.toml
rust_book/ch14/adder/: Cargo.toml
rust_book/ch15/: Cargo.toml
rust_book/ch15/src/: lib.rs  main.rs  main5.rs  main6.rs
rust_book/ch16/: Cargo.toml
rust_book/ch16/src/: main.rs  main2.rs  main3.rs
rust_book/ch17/src/: lib.rs  main.rs
rust_book/ch18/: Cargo.toml
rust_book/ch18/src/: main.rs
rust_book/ch19/: Cargo.toml
rust_book/ch19/hello_macro/src/: lib.rs
rust_book/ch19/src/: main.rs  main4.rs
rust_book/ch20/hello/: 404.html  Cargo.toml
rust_book/ch20/hello/src/: lib.rs  main.rs
rust_book/rusty-journal/: test-journal.json
rust_book/rusty-journal/src/: tasks.rs
rust_book/src/: main4.rs
rust_entry_book/: README.md
rust_entry_book/ch03/bitonic-sorter/: Cargo.toml  Makefile
rust_entry_book/ch03/bitonic-sorter/examples/: benchmark.rs
rust_entry_book/ch03/bitonic-sorter/src/: first.rs  fourth.rs  second.rs  third.rs  utils.rs
rust_entry_book/ch07/ex07/: Cargo.toml
rust_entry_book/ch07/samples/: Cargo.toml
rust_entry_book/ch07/toyvec/: Cargo.toml
rusty-journal/src/: main.rs  tasks.rs
skim-sample/: Cargo.toml
skim-sample/src/: main.rs
socket-programming/: Cargo.toml
socket-programming/src/: lib.rs  main.rs  tcp_server.rs
to-hex/: Cargo.toml
to-hex/src/: main.rs
todos-graphql/: .env  .gitignore  Cargo.toml  docker-compose.yml
todos-graphql/src/: context.rs  data.rs  db.rs  endpoints.rs  graphql.rs  lib.rs  main.rs  model.rs
tokio-console-test/: Cargo.toml
tokio-console-test/src/: main.rs
tokio-sample/: Cargo.toml
tokio-sample/examples/: async-await.rs  github-api.rs  join-spawn.rs  join.rs  select.rs  simple-async.rs  spawn-join.rs  spawn-result-channel.rs  spawn-result-joinhandle.rs  spawn.rs
tokio-tutorial/: Makefile
tokio-tutorial/examples/: channels.rs  echo-server-copy.rs  echo-server.rs  hello-redis.rs  mini-tokio.rs  shared-state.rs  simple-future.rs  spawing.rs  streams.rs
tokio-tutorial/src/: main.rs
toml-sample/: Cargo.toml  Setting.toml
toml-sample/src/: main.rs
trait-object-study/: Cargo.toml
trait-object-study/src/: main.rs
ulid-rs-sample/: Cargo.toml
ulid-rs-sample/src/: main.rs
wordcount/: Cargo.toml  README.md
wordcount/src/: lib.rs  main.rs
(+10 files in other folders)
