[workspace]

members = [
  "./grpc-sample",
	"./parser",
	"./wordcount",
	"./skim-sample",
	"./toml-sample",
	"./tokio-sample",
	"./rusty-journal",
	"./tokio-tutorial",
	"./socket-programming",
	"./trait-object-study",
  "./regex-sample",
	"./rstest-sample",
  "./pwhash-sample",
  "./ulid-rs-sample",
  "./rand-chacha-sample",
  "./rusoto-sample",
  "./rust-argon2-sample",
  "./graphql-monolith-api",
  "./rust-aws-sdk-sample"
]
