[package]
name = "graphql-monolith-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "3.0"
async-graphql-actix-web = "3.0"
actix-web = { version = "4.0.1", default-features = false, features = ["macros"] }
once_cell = "1.8.0"
