[package]
name = "layered-arch-sample"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures = "0.3.9"
serde = "1.0.118"
serde_derive = "1.0.118"
dotenv = "0.15"
chrono = "0.4"
failure = "0.1.8"

[dependencies.diesel]
features = ["postgres", "chrono", "r2d2"]
version = "1.4"
