[package]
name = "rusoto-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ses"
path = "src/bin/ses.rs"

[dependencies]
rusoto_core = "0.47.0"
rusoto_ses = "0.47.0"
tokio = { version = "1.17.0", features = ["full"] }
